--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ gen/
 # Local configuration file (sdk path, etc)
 local.properties
 
+# Windows thumbnail db
+Thumbs.db
+
+# OSX files
+.DS_Store
+
 # Eclipse project files
 .classpath
 .project
